Reservation_table_upd

--- a/AtkTennisWeb/Views/Home/NewRegister.cshtml
+++ b/AtkTennisWeb/Views/Home/NewRegister.cshtml
@@ -226,13 +226,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-4">
-                                <button type="submit" class="btn btn-danger btn-block">Vazgeç</button>
+                        <div class="row" style="justify-content:end">
+                            <div class="col-1">
+                                <button type="submit" class="btn btn-danger btn-block"><i class="fas fa-window-close"></i></button>
                             </div>
 
-                            <div class="col-8">
-                                <button type="submit" class="btn btn-warning btn-block" onclick="register()">Kaydet</button>
+                            <div class="col-4">
+                                <button type="submit" class="btn btn-success btn-block" onclick="register()"><i class="fas fa-save"></i></button>
                             </div>
 
                         </div>
