--- a/AtkTennisWeb/Views/SystemSettings/EducationSchoolSettings.cshtml
+++ b/AtkTennisWeb/Views/SystemSettings/EducationSchoolSettings.cshtml
@@ -27,7 +27,7 @@
                                 <h3>Okul Türleri</h3>
                             </div>
                             <div>
-                                <button class="btn btn-outline-primary" data-toggle="modal" data-target="#addType">Okul Türü Ekle</button>
+                                <button class="btn btn-outline-primary" data-toggle="modal" data-target="#addType"><i class="fas fa-plus-square"></i></button>
                             </div>
                         </div>
 
@@ -51,8 +51,8 @@
                                             <td>@item.Types</td>
 
                                             <td>
-                                                <button class="btn btn-outline-success" id="@item.SchoolTypesId" onclick="openUpdateschoolType(this.id)">Güncelle</button>
-                                                @*<button class="btn btn-outline-danger" id="@item.SchoolTypesId" onclick="deleteOpenModal(this.id)">Sil</button>*@
+                                                <button class="btn btn-outline-success" id="@item.SchoolTypesId" onclick="openUpdateschoolType(this.id)"><i class="fas fa-edit"></i></button>
+                                                @*<button class="btn btn-outline-danger" id="@item.SchoolTypesId" onclick="deleteOpenModal(this.id)"><i class="fas fa-trash"></i></button>*@
                                             </td>
                                         </tr>
                                     }
@@ -68,7 +68,7 @@
                                 <h3>Okul Seviyeleri</h3>
                             </div>
                             <div>
-                                <button class="btn btn-outline-primary" data-toggle="modal" data-target="#addLevel">Okul Seviyesi Ekle</button>
+                                <button class="btn btn-outline-primary" data-toggle="modal" data-target="#addLevel"><i class="fas fa-plus-square"></i></button>
                             </div>
                         </div>
                         <div class="card-body">
@@ -91,8 +91,8 @@
 
 
                                             <td>
-                                                <button class="btn btn-outline-success" id="@item.SchoolLevelId" onclick="openUpdateschoolLevel(this.id)">Güncelle</button>
-                                                @*<button class="btn btn-outline-danger" id="@item.SchoolLevelId" onclick="deleteOpenModalLevel(this.id)">Sil</button>*@
+                                                <button class="btn btn-outline-success" id="@item.SchoolLevelId" onclick="openUpdateschoolLevel(this.id)"><i class="fas fa-edit"></i></button>
+                                                @*<button class="btn btn-outline-danger" id="@item.SchoolLevelId" onclick="deleteOpenModalLevel(this.id)"><i class="fas fa-trash"></i></button>*@
                                             </td>
                                         </tr>
                                     }
