--- a/AtkTennisWeb/Views/SystemSettings/ReservationSettings.cshtml
+++ b/AtkTennisWeb/Views/SystemSettings/ReservationSettings.cshtml
@@ -30,7 +30,7 @@
                             <div>
 
                                 @*<button type="button" class="btn btn-outline-primary"  data-toggle="modal" data-target="#addResSettings">Ekle</button>*@
-                                <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#openUpdateResSetModal" >Güncelle</button>
+                                <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#openUpdateResSetModal" ><i class="fas fa-edit"></i></button>
 
                             </div>
                         </div>
@@ -52,13 +52,13 @@
                                     @for (int i = 0; i < Model.reservationSettings.Count; i++)
                                     {
                                         
-                                        <tr style="text-align:center">
-                                            <td>@Model.reservationSettings[i].ReservationSettingsInf</td>
-                                            <td>@Model.reservationSettings[i].ReservationValue</td>
-                                            @*<td>
-                                                <button type="button" class="btn btn-outline-danger" id="@Model.reservationSettings[i].ReservationSettingsId" onclick="deleteResSetOpenModal(this.id)">Sil</button>
-                                            </td>*@
-                                        </tr>
+                                    <tr style="text-align:center">
+                                        <td>@Model.reservationSettings[i].ReservationSettingsInf</td>
+                                        <td>@Model.reservationSettings[i].ReservationValue</td>
+                                        @*<td>
+            <button type="button" class="btn btn-outline-danger" id="@Model.reservationSettings[i].ReservationSettingsId" onclick="deleteResSetOpenModal(this.id)"><i class="fas fa-trash"></i></button>
+        </td>*@
+                                    </tr>
                                     }
 
                                 </tbody>
