Css Js temizlendi , Res Table edit.

--- a/AtkTennis/Views/Security/ListUsers.cshtml
+++ b/AtkTennis/Views/Security/ListUsers.cshtml
@@ -76,31 +76,31 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <div class="roww roww-space">
-                            <div class="coll-2">
-                                <div class="input--group">
+                        <div class="row row-space">
+                            <div class="col-2">
+                                <div class="input-group">
                                     <label class="label">Name</label>
-                                    <input type="email" id="fullName" class="input--style-4">
+                                    <input type="email" id="fullName" class="input-style-4">
                                 </div>
                             </div>
-                            <div class="coll-2">
-                                <div class="input--group">
+                            <div class="col-2">
+                                <div class="input-group">
                                     <label class="label">Email</label>
-                                    <input type="text" id="email" class="input--style-4">
+                                    <input type="text" id="email" class="input-style-4">
                                 </div>
                             </div>
                         </div>
                         <div class="roww roww-space">
-                            <div class="coll-2">
-                                <div class="input--group">
+                            <div class="col-2">
+                                <div class="input-group">
                                     <label class="label">Kullanıcı Adı</label>
-                                    <input type="email" id="userName" class="input--style-4">
+                                    <input type="email" id="userName" class="input-style-4">
                                 </div>
                             </div>
-                            <div class="coll-2">
-                                <div class="input--group">
+                            <div class="col-2">
+                                <div class="input-group">
                                     <label class="label">Phone Number</label>
-                                    <input type="text" id="phone" class="input--style-4">
+                                    <input type="text" id="phone" class="input-style-4">
                                 </div>
                             </div>
                         </div>
