--- a/AtkTennisWeb/Views/Public/SignIn.cshtml
+++ b/AtkTennisWeb/Views/Public/SignIn.cshtml
@@ -18,10 +18,10 @@
 <link href="~/adminRoot/css/jquery-confirm.css" rel="stylesheet" />
 
 
-<body class="hold-transition login-page" style="background-image: url('/images/atkimg/asd.webp'); background-size:cover">
+<body class="hold-transition login-page" style="background-color:black">
     <div class="login-box">
         <div class="login-logo">
-            <img src="~/images/atkimg/altyapilogo.png" alt="Alternate Text" style="width:40%">
+            <img src="~/images/atkimg/altyapilogo.png" alt="Alternate Text" style="width:35%">
             <h3 style="color:white">
                 <b>TEN-İS</b>
                 <br />
