--- a/AtkTennis/Views/Admin/CourtSettings.cshtml
+++ b/AtkTennis/Views/Admin/CourtSettings.cshtml
@@ -235,39 +235,39 @@
             </div>
             <div class="modal-body">
 
-                <div class="roww roww-space">
+                <div class="row row-space">
 
-                    <div class="coll-2">
-                        <div class="input--group">
+                    <div class="col-2">
+                        <div class="input-group">
                             <label class="label">Adı</label>
-                            <input type="text" id="Name" class="input--style-4">
+                            <input type="text" id="Name" class="input-style-4">
                         </div>
                     </div>
-                    <div class="coll-2">
-                        <div class="input--group">
+                    <div class="col-2">
+                        <div class="input-group">
                             <label class="label">Fiyatı</label>
-                            <input type="text" id="Price" class="input--style-4">
+                            <input type="text" id="Price" class="input-style-4">
                         </div>
                     </div>
                 </div>
 
-                <div class="roww roww-space">
-                    <div class="coll-2">
-                        <div class="input--group">
+                <div class="row row-space">
+                    <div class="col-2">
+                        <div class="input-group">
                             <label class="label">Ücret Tipi</label>
-                            <input type="text" id="PriceType" class="input--style-4">
+                            <input type="text" id="PriceType" class="input-style-4">
                         </div>
                     </div>
-                    <div class="coll-2">
-                        <div class="input--group">
+                    <div class="col-2">
+                        <div class="input-group">
                             <label class="label">Tarife Tipi</label>
-                            <input type="text" id="RecipeType" class="input--style-4">
+                            <input type="text" id="RecipeType" class="input-style-4">
                         </div>
                     </div>
-                    <div class="coll-2">
-                        <div class="input--group">
+                    <div class="col-2">
+                        <div class="input-group">
                             <label class="label">Durumu</label>
-                            <input type="text" id="Conditions" class="input--style-4">
+                            <input type="text" id="Conditions" class="input-style-4">
                         </div>
                     </div>
                 </div>
@@ -295,16 +295,16 @@
             </div>
             <div class="modal-body">
            
-                    <div class="roww roww-space">
+                    <div class="row row-space">
 
-                        <div class="coll-2">
-                            <div class="input--group">
+                        <div class="col-2">
+                            <div class="input-group">
                                 <label class="label">Adı</label>
                                 <input type="text" id="name" class="input--style-4">
                             </div>
                         </div>
-                        <div class="coll-2">
-                            <div class="input--group">
+                        <div class="col-2">
+                            <div class="input-group">
                                 <label class="label">Türü</label>
                                 <input type="text" id="type" class="input--style-4">
                             </div>
@@ -312,14 +312,14 @@
                     </div>
 
                     <div class="roww roww-space">
-                        <div class="coll-2">
-                            <div class="input--group">
+                        <div class="col-2">
+                            <div class="input-group">
                                 <label class="label">Durumu</label>
                                 <input type="text" id="condition" class="input--style-4">
                             </div>
                         </div>
-                        <div class="coll-2">
-                            <div class="input--group">
+                        <div class="col-2">
+                            <div class="input-group">
                                 <label class="label">Web Durumu</label>
                                 <input type="text" id="webcondition" class="input--style-4">
                             </div>
@@ -373,14 +373,14 @@
             <div class="modal-body">
                 <div class="roww roww-space">
 
-                    <div class="coll-2">
-                        <div class="input--group">
+                    <div class="col-2">
+                        <div class="input-group">
                             <label class="label">Kort Adı</label>
                             <input type="text" id="court_name" class="input--style-4">
                         </div>
                     </div>
-                    <div class="coll-2">
-                        <div class="input--group">
+                    <div class="col-2">
+                        <div class="input-group">
                             <label class="label">Kort Türü</label>
                             <input type="text" id="court_type" class="input--style-4">
                         </div>
@@ -388,14 +388,14 @@
                 </div>
 
                 <div class="roww roww-space">
-                    <div class="coll-2">
-                        <div class="input--group">
+                    <div class="col-2">
+                        <div class="input-group">
                             <label class="label">Kort Durumu</label>
                             <input type="text" id="court_condition" class="input--style-4">
                         </div>
                     </div>
-                    <div class="coll-2">
-                        <div class="input--group">
+                    <div class="col-2">
+                        <div class="input-group">
                             <label class="label">Web Durumu</label>
                             <input type="text" id="court_webcondition" class="input--style-4">
                         </div>
