--- a/AtkTennis/Views/Security/Register.cshtml
+++ b/AtkTennis/Views/Security/Register.cshtml
@@ -21,32 +21,32 @@
                     <div class="card-body">
                         <h2 class="title">Personel Kayıt</h2>
                         <form asp-controller="Security" asp-action="Register" method="post">
-                            <div class="roww roww-space">
-                                <div class="coll-2">
-                                    <div class="input--group">
+                            <div class="row row-space">
+                                <div class="col-2">
+                                    <div class="input-group">
                                         <label class="label">Ad-Soyad</label>
-                                        <input asp-for="Registers.FullName" type="text" id="name" placeholder="Full-Name" class="input--style-4" autocomplete="new-password">
+                                        <input asp-for="Registers.FullName" type="text" id="name" placeholder="Full-Name" class="input-style-4" autocomplete="new-password">
                                     </div>
                                 </div>
-                                <div class="coll-2">
-                                    <div class="input--group">
+                                <div class="col-2">
+                                    <div class="input-group">
                                         <label class="label">Giriş Yapacağı Kullanıcı Adı</label>
-                                        <input asp-for="Registers.UserName" type="text" id="name" placeholder="UserName" class="input--style-4" autocomplete="new-password">
+                                        <input asp-for="Registers.UserName" type="text" id="name" placeholder="UserName" class="input-style-4" autocomplete="new-password">
                                     </div>
                                 </div>
                             </div>
-                            <div class="roww roww-space">
-                                <div class="coll-2">
-                                    <div class="input--group">
+                            <div class="row row-space">
+                                <div class="col-2">
+                                    <div class="input-group">
                                         <label class="label">Birthday</label>
-                                        <div class="input--group-icon">
-                                            <input asp-for="Registers.BirthDate" type="date" id="birth-date" placeholder="BirthDate (exp: gg.aa.yyyy)" class="input--style-4 js-datepicker" autocomplete="new-password">
+                                        <div class="input-group-icon">
+                                            <input asp-for="Registers.BirthDate" type="date" id="birth-date" placeholder="BirthDate (exp: gg.aa.yyyy)" class="input-style-4 js-datepicker" autocomplete="new-password">
                                             <i class="zmdi zmdi-calendar-note input-icon js-btn-calendar"></i>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="coll-2">
-                                    <div class="input--group">
+                                <div class="col-2">
+                                    <div class="input-group">
                                         <label class="label">Gender</label>
                                         <div class="p-t-10">
                                             <label class="radio-container m-r-45">
@@ -64,30 +64,30 @@
                                 </div>
                             </div>
                             <div class="roww roww-space">
-                                <div class="coll-2">
-                                    <div class="input--group">
+                                <div class="col-2">
+                                    <div class="input-group">
                                         <label class="label">Email</label>
                                         <input asp-for="Registers.Email" type="email" id="email" placeholder="Email" class="input--style-4" autocomplete="new-password">
                                     </div>
                                 </div>
-                                <div class="coll-2">
-                                    <div class="input--group">
+                                <div class="col-2">
+                                    <div class="input-group">
                                         <label class="label">Phone Number</label>
                                         <input asp-for="AppIdentityUsers.PhoneNumber" type="text" class="input--style-4" id="phone" placeholder="Phone" autocomplete="new-password">
                                     </div>
                                 </div>
                             </div>
-                            <div class="roww roww-space">
-                                <div class="coll-2">
-                                    <div class="input--group">
+                            <div class="row row-space">
+                                <div class="col-2">
+                                    <div class="input-group">
                                         <label class="label">Password</label>
-                                        <input asp-for="Registers.Password" type="password" id="password" placeholder="Password" class="input--style-4" autocomplete="new-password">
+                                        <input asp-for="Registers.Password" type="password" id="password" placeholder="Password" class="input-style-4" autocomplete="new-password">
                                     </div>
                                 </div>
-                                <div class="coll-2">
-                                    <div class="input--group">
+                                <div class="col-2">
+                                    <div class="input-group">
                                         <label class="label">Confirm Password</label>
-                                        <input asp-for="Registers.ConfirmPassword" type="password" id="confirm-password" placeholder="Confirm-Password" class="input--style-4" autocomplete="new-password">
+                                        <input asp-for="Registers.ConfirmPassword" type="password" id="confirm-password" placeholder="Confirm-Password" class="input-style-4" autocomplete="new-password">
                                     </div>
                                 </div>
 
