--- a/AtkTennisWeb/Views/Public/Reservation.cshtml
+++ b/AtkTennisWeb/Views/Public/Reservation.cshtml
@@ -47,13 +47,13 @@
                                 @if (a == "1")
                                 {
                                     <div class="card-title">
-                                        <button type="button" class="btn btn-primary courtbutton" onclick="openResModal()"> Yeni Rezervasyon <i style="margin-left:10px" class="fas fa-plus"></i></button>
+                                        <button type="button" class="btn btn-danger courtbutton" onclick="openResModal()"> Yeni Rezervasyon <i style="margin-left:10px" class="fas fa-plus"></i></button>
                                     </div>
                                 }
                                 else
                                 {
                                     <div class="card-title">
-                                        <button type="button" class="btn btn-primary courtbutton" onclick="WebReservation()"> Yeni Rezervasyon <i style="margin-left:10px" class="fas fa-plus"></i></button>
+                                        <button type="button" class="btn btn-danger courtbutton" onclick="WebReservation()"> Yeni Rezervasyon <i style="margin-left:10px" class="fas fa-plus"></i></button>
                                     </div>
                                 }
                             }
@@ -62,7 +62,7 @@
                             <div>
                                 <nav aria-label="Page navigation example">
                                     <ul id="getResTable" class="pagination">
-                                        <li class="page-item"><button style="color:black" class="page-link" onclick="getRes('today')" name="@DateTime.Now">Bugün</button></li>
+                                        <li class="page-item"><button style="color:black; background-color:#ffc107" class="page-link" onclick="getRes('today')" name="@DateTime.Now">Bugün</button></li>
                                         <li class="page-item"><button style="color:black" class="page-link" onclick="getRes('tomorrow')" name="@DateTime.Now.AddDays(1)">Yarın</button></li>
                                         <li class="page-item"><input class="form-control" type="date" id="timeNow" style="border: 1px solid var(--color-contrast-low);"></li>
                                         <li class="page-item"><button style="color:black; background-color:#f9f9f9" class="page-link" onclick="preDate()"><i class="fas fa-chevron-left"></i></button></li>
@@ -72,80 +72,67 @@
                             </div>
                         </div>
 
-                        <div class="card-body">
 
-                            <div id="asd">
+                        <div class="cd-schedule cd-schedule--loading margin-top-lg margin-bottom-lg js-cd-schedule">
+                            <div class="cd-schedule__timeline">
+                                <ul>
+                                    
+                                    @for (int i = 0; i < Model.resTimes.Count; i += 4 )
+                                    {
+                                        <li><span>@Model.resTimes[i].ResTimes</span></li>
 
-                            </div>
-                            @*<div class="cd-schedule cd-schedule--loading margin-top-lg margin-bottom-lg js-cd-schedule" style="width: calc(100% * var(--component-padding));">
+                                    }
+                                    
+                                </ul>
+                            </div> <!-- .cd-schedule__timeline -->
 
+                            <div class="cd-schedule__events">
+                                <ul>
+                                    @foreach (var item in Model.courts)
+                                    {
+                                        <li class="cd-schedule__group">
+                                            <div class="cd-schedule__top-info"><span>@item.CourtName</span></div>
 
-
-                                <div class="cd-schedule__timeline">
-                                    <ul>
-                                        @for (int i = 0; i < Model.resTimes.Count; i += 4)
-                                        {
-                                            <li><span>@Model.resTimes[i].ResTimes</span></li>
-
-                                        }
-
-                                    </ul>
-                                </div>
-
-
-
-                                <div class="cd-schedule__events">
-                                    <ul>
-                                        @foreach (var item in Model.courts)
-                                        {
-                                            <li class="cd-schedule__group">
-                                                <div class="cd-schedule__top-info"><span>@item.CourtName</span></div>
-
-                                                <ul>
-                                                    @foreach (var item2 in Model.reservations)
+                                            <ul style="height:850px">
+                                                @foreach (var item2 in Model.reservations)
+                                                {
+                                                    if (item.CourtId == item2.Court.CourtId)
                                                     {
-                                                        if (item.CourtId == item2.Court.CourtId)
-                                                        {
-                                                            <li class="cd-schedule__event ">
+                                                        <li class="cd-schedule__event ">
 
-                                                                <a data-start="@item2.ResStartTime" data-end="@item2.ResFinishTime" data-content="event-abs-circuit" data-event="@item2.ResEvent">
-                                                                    <em class="cd-schedule__name">KK</em>
-                                                                </a>
-                                                            </li>
-                                                        }
+                                                            <a data-start="@item2.ResStartTime" data-end="@item2.ResFinishTime" data-event="@item2.ResEvent">
+                                                                <em class="cd-schedule__name">KK</em>
+                                                            </a>
+                                                        </li>
                                                     }
-
-                                                </ul>
-                                            </li>
-                                        }
-
-                                    </ul>
-                                </div>
-
+                                                }
+                                            </ul>
+                                        </li>
+                                    }
+                                </ul>
+                            </div>
 
 
-                                <div class="cd-schedule-modal">
-
-                                    <header class="cd-schedule-modal__header">
-                                        <div class="cd-schedule-modal__content">
-                                            <span class="cd-schedule-modal__date"></span>
-                                            <h3 class="cd-schedule-modal__name"></h3>
-                                        </div>
-
-                                        <div class="cd-schedule-modal__header-bg"></div>
-                                    </header>
-
-                                    <div class="cd-schedule-modal__body">
-                                        <div class="cd-schedule-modal__event-info"></div>
-                                        <div class="cd-schedule-modal__body-bg"></div>
+                            <div class="cd-schedule-modal">
+                                <header class="cd-schedule-modal__header">
+                                    <div class="cd-schedule-modal__content">
+                                        <span class="cd-schedule-modal__date"></span>
+                                        <h3 class="cd-schedule-modal__name"></h3>
                                     </div>
 
-                                    <a href="#0" class="cd-schedule-modal__close text-replace">Close</a>
+                                    <div class="cd-schedule-modal__header-bg"></div>
+                                </header>
+
+                                <div class="cd-schedule-modal__body">
+                                    <div class="cd-schedule-modal__event-info"></div>
+                                    <div class="cd-schedule-modal__body-bg"></div>
                                 </div>
 
-                                <div class="cd-schedule__cover-layer"></div>
+                                <a href="#0" class="cd-schedule-modal__close text-replace">Close</a>
+                            </div>
 
-                            </div>*@
+                            <div class="cd-schedule__cover-layer"></div>
+
                         </div>
                     </div>
                 </div>
@@ -416,69 +403,69 @@
                 debugger;
 
 
-                $("#asd").empty();
-               
-                row = "";
-                row +=' <div class="cd-schedule cd-schedule--loading margin-top-lg margin-bottom-lg js-cd-schedule" style="width: calc(100% * var(--component-padding));">';
-                row +='<div class="cd-schedule__timeline">';
-                row +='<ul>';
+                //$("#asd").empty();
 
-                for (var b = 0; b < res.resTimes.length; b += 4) {
+                //row = "";
+                //row +=' <div class="cd-schedule cd-schedule--loading margin-top-lg margin-bottom-lg js-cd-schedule" style="width: calc(100% * var(--component-padding));">';
+                //row +='<div class="cd-schedule__timeline">';
+                //row +='<ul>';
 
-                    row += '<li><span>' + res.resTimes[b].resTimes + '</span></li>';
-                }  
-                row += '</ul></div>';
+                //for (var b = 0; b < res.resTimes.length; b += 4) {
 
-                row += '<div class="cd-schedule__events">';
-                row += '<ul>';
+                //    row += '<li><span>' + res.resTimes[b].resTimes + '</span></li>';
+                //}
+                //row += '</ul></div>';
 
-                for (var i = 0; i < res.courts.length; i++) {
+                //row += '<div class="cd-schedule__events">';
+                //row += '<ul>';
 
-                    row += '<li class="cd-schedule__group">';
-                    row += '<div class="cd-schedule__top-info"><span>' + res.courts[i].courtName + '</span></div>';
-                    row += '<ul>';
+                //for (var i = 0; i < res.courts.length; i++) {
 
-                    for (var a = 0; a < res.reservations.length; a++) {
+                //    row += '<li class="cd-schedule__group">';
+                //    row += '<div class="cd-schedule__top-info"><span>' + res.courts[i].courtName + '</span></div>';
+                //    row += '<ul>';
 
-                        if (res.courts[i].courtId == res.reservations[a].court.courtId) {
-                            row += '<li class="cd-schedule__event">';
-                            row += '<a data-start="' + res.reservations[a].resStartTime + '"data-end="' + res.reservations[a].resFinishTime + '"data-content="event-abs-circuit" data-event="' + res.reservations[a].resEvent + '">';
-                            row += '<em class="cd-schedule__name">KK</em>';
-                            row += '</a>';
-                            row += '</li>';
-                        }
-                    }
+                //    for (var a = 0; a < res.reservations.length; a++) {
 
-                    row += '</ul>';
-                    row += '</li>';
-                }
-                row += '</ul>';
-                row += '</div>';
+                //        if (res.courts[i].courtId == res.reservations[a].court.courtId) {
+                //            row += '<li class="cd-schedule__event">';
+                //            row += '<a data-start="' + res.reservations[a].resStartTime + '"data-end="' + res.reservations[a].resFinishTime + '"data-content="event-abs-circuit" data-event="' + res.reservations[a].resEvent + '">';
+                //            row += '<em class="cd-schedule__name">KK</em>';
+                //            row += '</a>';
+                //            row += '</li>';
+                //        }
+                //    }
 
-
-               
-                row += '<div class="cd-schedule-modal">';
-                row += '<header class="cd-schedule-modal__header">';
-                row += '<div class="cd-schedule-modal__content">';
-                row += '<span class="cd-schedule-modal__date"></span>';
-                row += '<h3 class="cd-schedule-modal__name"></h3>';
-                row += '</div>';
-
-                row += '<div class="cd-schedule-modal__header-bg"></div>';
-                row += '</header>';
-                row += '<div class="cd-schedule-modal__body">';
-                row += '<div class="cd-schedule-modal__event-info"></div>';
-                row += '<div class="cd-schedule-modal__body-bg"></div>';
-                row += '</div>';
-
-                row += '<a href="#0" class="cd-schedule-modal__close text-replace">Close</a>';
-                row += '</div>';
-                row += '<div class="cd-schedule__cover-layer"></div>';
-                row += '</div>';
+                //    row += '</ul>';
+                //    row += '</li>';
+                //}
+                //row += '</ul>';
+                //row += '</div>';
 
 
 
-                $("#asd").append(row);
+                //row += '<div class="cd-schedule-modal">';
+                //row += '<header class="cd-schedule-modal__header">';
+                //row += '<div class="cd-schedule-modal__content">';
+                //row += '<span class="cd-schedule-modal__date"></span>';
+                //row += '<h3 class="cd-schedule-modal__name"></h3>';
+                //row += '</div>';
+
+                //row += '<div class="cd-schedule-modal__header-bg"></div>';
+                //row += '</header>';
+                //row += '<div class="cd-schedule-modal__body">';
+                //row += '<div class="cd-schedule-modal__event-info"></div>';
+                //row += '<div class="cd-schedule-modal__body-bg"></div>';
+                //row += '</div>';
+
+                //row += '<a href="#0" class="cd-schedule-modal__close text-replace">Close</a>';
+                //row += '</div>';
+                //row += '<div class="cd-schedule__cover-layer"></div>';
+                //row += '</div>';
+
+
+
+                //$("#asd").append(row);
             }
         })
     }
