--- a/AtkTennisWeb/Views/Shared/_Layout.cshtml
+++ b/AtkTennisWeb/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="~/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
 
     <link href="~/vendor/select2/select2.min.css" rel="stylesheet" media="all">
-    <link href="~/rcss/main.css" rel="stylesheet" media="all">
+    @*<link href="~/rcss/main.css" rel="stylesheet" media="all">*@
     <link href="~/vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
 
     <!-- jQuery -->
@@ -623,7 +623,7 @@
     <script src="~/plugins/pdfmake/vfs_fonts.js"></script>
 
     <script src="~/vendor/select2/select2.min.js"></script>
-    <script src="~/rjs/global.js"></script>
+    @*<script src="~/rjs/global.js"></script>*@
 
     @*dataTable*@
     <script src="~/plugins/datatables/jquery.dataTables.js"></script>
